assets/css/account.css
@import url('variables.css');

#account-main section {
  margin: var(--padding-xl) auto;
}

#account-main h2 {
  line-height: 1;
}

#account-main p {
  margin: var(--padding-sm) 0;
}

#account-main .table {
  margin-top: var(--padding-sm);
  white-space: nowrap;
}

#account-header {
  background-image: url("../img/account-header.jpg");
  background-size: cover;
  background-position: center 62%;
  padding: var(--page-header-padding);
}

.table {
  width: 100%;
  border-radius: var(--button-radius);
  overflow: hidden;
}

#account-order th {
  background: color-mix(in srgb, var(--dark-gray) 75%, white);
  text-align: left;
  padding: var(--padding-xs) 0 var(--padding-xs) 1em;
  white-space: wrap;
}

#account-order tr:nth-child(odd) {
  background: color-mix(in srgb, var(--dark-gray) 50%, var(--almost-black));
}

#account-order tr:nth-child(even) {
  background: color-mix(in srgb, var(--dark-gray) 95%, white);
}

#account-order td {
  border-radius: inherit;
  padding: var(--padding-xs) 0 var(--padding-xs) 1em;
}


section#account-profile {
  margin-bottom: 0;
}



#account-profile .table {
  margin-bottom: var(--padding-sm);
}

#account-profile .td {
  vertical-align: middle;
  padding-bottom: var(--padding-xs);
}

#account-profile .td:first-child {
  padding-right: var(--padding-sm);
  font-family: var(--font-heading);
}

.profile-details {
  display: flex;
  flex-flow: column wrap;
  margin: var(--padding-sm) 0;
}

.profile-details-row {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: flex-start;
  align-content: flex-start;
}

.profile-details-label,
.profile-details-field {
  margin-bottom: var(--padding-xs);
}

.profile-details-label {
  flex: 1 1 calc(var(--large)/7);
}

.profile-details-field {
  flex: 3 1 calc(var(--large)/2.6);
}

.profile-picture-wrapper {
  display: flex;
  flex-flow: column wrap;
  justify-items: center;
  align-items: center;
}

.account-profile-picture {
  flex: 0 1 auto;
  max-width: 200px;
  max-height: 200px;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
  text-wrap: wrap;

  /* margin: auto; */
}



.account-profile-picture-cover {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: var(--almost-black);
  text-align: center;
  display: flex;
  align-items: center;
  transition: var(--transition-all);
  cursor: pointer;
}

.account-profile-picture-cover:hover {
  opacity: .7;
  transition: var(--transition-all);
}

.profile-picture-button {
  flex: 0 1 auto;
  margin-top: var(--padding-sm);
}

.button {
  display: inline-block;
}

@media screen and (min-width: 768px) {
  .profile-picture-button {
    display: none;
  }
}

